gitlab/issues_text/target_missing/host_missing/accel_missing/2314
Building QEMU 9.0.0 fails on MacOS 10.15.7 (error: initializing 'NSEdgeInsets' (aka 'struct NSEdgeInsets') with an expression of incompatible type 'id')
Description of problem:
QEMU fails to compile using Homebrew on OS X 10.15.7:
```
../ui/cocoa.m:542:18: error: initializing 'NSEdgeInsets' (aka 'struct NSEdgeInsets') with an expression of incompatible type 'id'
    NSEdgeInsets insets = [[[self window] screen] safeAreaInsets];
                 ^        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
```
Steps to reproduce:
1. Compile QEMU on OS X 10.15.7 using Homebrew
2.
3.
Additional information:
Build log
[02.make.zip](/uploads/dfb618b86984ed6cf699d94bf9d6c9e1/02.make.zip)
